@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         User-getgrouplist
-version:      1.0.1
+version:      1.0.2
 version_from: lib/User/getgrouplist.pm
 installdirs:  site
 requires:
