@@ -1,9 +1,15 @@
 User::getgrouplist
 ==================
 
-Interface for glibc function "getgrouplist".
+Interface for libc function "getgrouplist".
 Please see the respective function's man page for detailed information,
 or visit the perldoc of this module.
+
+getgrouplist is not a POSIX call; however, it exists on various UNIX-like
+platforms, including Linux, many BSD variants, and Darwin (MacOS X). It
+is known NOT to exist on Solaris, and Irix. Makefile.PL checks for the
+call before building, and reports an error if your system does not support
+it.
 
 
 Installation
